fork grunt-marked项目

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-md-html",
   "description": "Convert markdown and HTML to each other.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/helinjiang/grunt-md-html",
   "author": {
     "name": "helinjiang",
@@ -27,6 +27,11 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "async": "^1.5.0",
+    "highlight.js": "^9.0.0",
+    "marked": "^0.3.5"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
@@ -37,6 +42,9 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "marked",
+    "markdown",
+    "html"
   ]
 }
