--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "highlight.js": "^9.0.0",
+    "iconv-lite": "^0.4.13",
     "marked": "^0.3.5"
   },
   "devDependencies": {
