--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-md-html",
   "description": "Convert markdown and HTML to each other.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "homepage": "https://github.com/helinjiang/grunt-md-html",
   "author": {
     "name": "helinjiang",
@@ -31,6 +31,7 @@
     "async": "^1.5.0",
     "highlight.js": "^9.0.0",
     "iconv-lite": "^0.4.13",
+    "js-beautify": "^1.5.10",
     "lodash": "^3.10.1",
     "marked": "^0.3.5"
   },
